# pmcpp

./: README.md  pmcpp.sh
TEMPLATE/: CMakeLists.txt  Doxyfile  README.md
TEMPLATE/docs/: index.md
TEMPLATE/src/: CMakeLists.txt
TEMPLATE/src/main/: CMakeLists.txt  main.cpp
TEMPLATE/src/{{PROJECT_NAME}}/: CMakeLists.txt  exception.hpp  program.cpp  program.hpp  program_args.hpp
TEMPLATE/tests/: CMakeLists.txt
TEMPLATE/tests/{{PROJECT_NAME}}_gtest/: CMakeLists.txt  main.cpp  program_test.cpp
